--- a/index.html
+++ b/index.html
@@ -11,23 +11,29 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.2/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/jstree.min.js"></script>
         <script>
-            $(function(){
-               $('input').change(function(){
-                  var reader = new FileReader();
-                  reader.onload = (function(event) {
-                      //$('#output').text(event.target.result);
-                      
-                      $('#output').jstree({ core: {
-                        data: [
-                            {id: 'a/b/c', parent: 'a/b', text: 'c'},
-                            {id: 'a/b', parent: 'a', text: 'b'},
-                            {id: 'a', parent: '#', text: 'a'}
-                        ]
-                    } });
-                      
-                  });
-                  reader.readAsText(this.files[0]);
-               });
+            $(function () {
+                $('input').change(function () {
+                    var reader = new FileReader();
+                    reader.onload = (function (event) {
+                        var lines = event.target.result.split("\n");
+                        var prefix = lines[0];
+                        var data = $.map(lines.slice(1), function (s) {
+                            var id = '#' + s.split(prefix).slice(1).join(prefix);
+                            return {
+                                id: id,
+                                parent: id.split('/').slice(0, -1).join('/'),
+                                text: id.split('/').slice(-1)[0]
+                            };
+                        });
+                        $('#output').jstree({
+                            core: {
+                                data: data
+                            }
+                        });
+
+                    });
+                    reader.readAsText(this.files[0]);
+                });
             });
         </script>
     </body>
