--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <style>
             body {
                 font-family: sans-serif;
+                font-size: 1em;
             }
 
             /* Conditional swapping of input */
@@ -16,6 +17,9 @@
             }
             #output .jstree-clicked input {
                 display: inline;
+                /* Disguise the fact that it's an input, since we do not allow edits. */
+                font-size: 1em; 
+                border: none;
             }
             #output .jstree-clicked .basename {
                 display: none;
